<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="editText_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="editText_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="editText_share">Just a piece of text</string>
    <string name="button_share">Share this Text</string>
</resources>
